syntax = "proto3";

service TriviaService {
  rpc GetTrivia(GetTriviaRequest) returns (GetTriviaResponse);
}

message GetTriviaRequest {
  string category = 1;
  string difficulty = 2;
  int32 numberOfQuestions = 3;
}

message GetTriviaResponse {
  string jsonData = 1;
}